--- a/conferencia_13.html
+++ b/conferencia_13.html
@@ -271,6 +271,8 @@ la soledad, sino ir más allá, superarla. No hay que aferrarse a los recuerdos 
 recuerdos son meras palabras, palabras que tienen sensaciones. Sólo cuando la mente está quieta por completo,
 libre de influencias, puede realizar aquello que es.
 </section>
+  </div>
+
   <footer class="footer-panel">
     <p>Conferencia del <strong>Agosto 27 de 1949.</strong><br>
     Traducción revisada por Arturo Orzábal Quintana<br>
@@ -278,8 +280,9 @@ libre de influencias, puede realizar aquello que es.
   </footer>
 <!-- Botón flotante para volver al índice -->
 <a href="index.html" class="back-to-index-btn" title="Volver al índice">
-  <span>←</span>
+  <span class="material-icons">home</span>
 </a>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </body>
 </html>
 
