--- a/conferencia_02.html
+++ b/conferencia_02.html
@@ -134,8 +134,9 @@
   </div>
 <!-- Botón flotante para volver al índice -->
 <a href="index.html" class="back-to-index-btn" title="Volver al índice">
-  <span>←</span>
+  <span class="material-icons">home</span>
 </a>
-</a>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 </body>
 </html>
